Closed Bug 1533296 Opened 6 years ago Closed 6 years ago

Shader compile failure did not fallback to compositor rendering on android

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 2 obsolete files)

When shader compile failure happened by Bug 1532245, it just stop rendering. It did not cause gecko to fallback to compositor rendering.

Blocks: wr-android
Summary: Shader compile failure did not fallback to normal compositor on android → Shader compile failure did not fallback to compositor rendering on android
Priority: -- → P3
Assignee: nobody → sotaro.ikeda.g

On android, nsWindow creates LayerManager and CompositorSession only once. We need to add re-creating LayerManager and CompositorSession during disabling WebRender.

Attached patch wip (obsolete) — Splinter Review
Depends on: 1529870
Attached patch wip (obsolete) — Splinter Review
Attachment #9054130 - Attachment is obsolete: true
Attachment #9056457 - Attachment is obsolete: true
Depends on: 1543560
Pushed by sikeda@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/548576be041b Make WebRender error as to Fallback to Compositor rendering during disabling WebRender on android r=nical
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: