gfx/ipc/RemoteCompositorSession.h
@@ -31,7 +31,6 @@ class RemoteCompositorSession final : public CompositorSession {
   void NotifySessionLost();
 
  private:
-  nsBaseWidget* mWidget;
   RefPtr<APZCTreeManagerChild> mAPZ;
   RefPtr<GeckoContentController> mContentController;
 };
